# trr_sim

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
examples/: simulation.py
scripts/: generate_track.py  sync_onshape.py
src/: trr_sim.py
src/track/: track.npy
src/trr_sim/: __init__.py
src/trr_sim/track/: center_line.stl  config.json  finish.stl  finish_line.stl  left_line.stl  left_rail.stl  right_line.stl  right_rail.stl  robot.urdf  start_line.stl  track.npy  track.stl
