[project]
name = "trr-sim"
version = "0.1.0"
description = "Simulation tool for the Toulouse Robot Race"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE.txt" }
keywords = ["simulation", "robotic", "bullet"]
authors = [{ name = "Thomas Chamelot", email = "chamelot.thomas@gmail.com" }]

dependencies = [
    "pybullet",
    "numpy"
]

[tool.black]
line-length = 120


[dependency-groups]
dev = [
    "matplotlib",
]
[build-system]
requires = ["uv_build>=0.9.11,<0.10.0"]
build-backend = "uv_build"
